選單折疊+導覽卡片rwd調整+select改js動態資料

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                             <li><a href="newbooks.html" class="p2">最新書籍</a></li>
                             <li><a href="contact.html" class="p2">聯絡我們</a></li>
                             <li>
-                                <p class="p2">導覽服務
-                                    <span class="material-symbols-outlined">keyboard_arrow_down</span>
-                                </p>
+                                <a class="p2 tour-guide-toggle">導覽服務
+                                    <span class="material-symbols-outlined arrow">keyboard_arrow_down</span>
+                                </a>
                                 <div class="tour-guide-sm">
                                     <a href="student.html" class="h5-ch">
                                         <div class="text">
@@ -91,9 +91,9 @@
         <section class="hero">
             <div class="search-bar reveal-item">
                 <div class="tab-btns">
-                    <button class="tab-btn active p2">館藏查詢</button>
-                    <button class="tab-btn p2">資源整合查詢</button>
-                    <button class="tab-btn p2">電子期刊</button>
+                    <button class="tab-btn active btn-sm">館藏查詢</button>
+                    <button class="tab-btn btn-sm">資源整合查詢</button>
+                    <button class="tab-btn btn-sm">電子期刊</button>
                 </div>
                 <div class="search-box">
                     <input type="text" placeholder="請輸入關鍵字">
@@ -150,7 +150,7 @@
                     </div>
                     <div class="col-xl-12 col-9 cards-group">
                         <div class="row">
-                            <div class="col-sm-12 col-md-4 col-4">
+                            <div class="col-sm-12 col-md-12 col-4">
                                 <a href="student.html" class="reveal-item">
                                     <div class="card pink">
                                         <span class="material-symbols-outlined arrow">north_east</span>
@@ -171,7 +171,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="col-sm-12 col-md-4 col-4">
+                            <div class="col-sm-12 col-md-12 col-4">
                                 <a href="advanced-course.html" class="reveal-item">
                                     <div class="card orange">
                                         <span class="material-symbols-outlined arrow">north_east</span>
@@ -192,7 +192,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="col-sm-12 col-md-4 col-4">
+                            <div class="col-sm-12 col-md-12 col-4">
                                 <a href="senior.html" class="reveal-item">
                                     <div class="card purple">
                                         <span class="material-symbols-outlined arrow">north_east</span>
@@ -520,8 +520,8 @@
                             <p class="p2 reveal-right">
                                 從創意手作、閱讀闖關到熱鬧的主題活動，每張照片都記錄著笑容與驚喜。這裡不只有書香，還有大家一起參與、學習、玩樂的溫暖回憶。快來看看自己是不是也在其中，與我們一起感受圖書館的活力與歡樂！
                             </p>
-                            <a href="./activity.html" class="dark big-btn btn-mid-bold reveal-right">更多活動<span
-                                    class="material-symbols-outlined">arrow_right_alt</span></a>
+                            <a href="./activity.html" class="dark big-btn right btn-mid-bold reveal-right">更多活動<span
+                                    class="material-symbols-outlined ">arrow_right_alt</span></a>
                         </div>
                     </div>
                     <div class="col-md-3 col-1"></div>
