--- a/senior.html
+++ b/senior.html
@@ -35,25 +35,27 @@
                             <li><a href="newbooks.html" class="p2">最新書籍</a></li>
                             <li><a href="contact.html" class="p2">聯絡我們</a></li>
                             <li>
-                                <p class="p2">導覽服務</p>
-                                <a href="student.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
+                                <a class="p2 tour-guide-toggle">導覽服務
+                                    <span class="material-symbols-outlined arrow">keyboard_arrow_down</span>
                                 </a>
-                                <a href="advanced-course.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">flag</span>研究與進修專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
-                                </a>
-                                <a href="senior.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">person_play</span>樂齡學習專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
-                                </a>
+                                <div class="tour-guide-sm">
+                                    <a href="student.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
+                                        </div>
+                                    </a>
+                                    <a href="advanced-course.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">flag</span>研究與進修專區
+                                        </div>
+                                    </a>
+                                    <a href="senior.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">person_play</span>樂齡學習專區
+                                        </div>
+                                    </a>
+                                </div>
+                                
                             </li>
                         </ul>
                         <div class="tool-btn">
@@ -120,14 +122,14 @@
             <img src="images/bg/tour-guide-purple-w810-2.png" alt="tour-guide-purple" class="tour-guide-purple-bg-w810">
             <div class="container">
                 <div class="row">
-                    <div class="label-btn purple active reveal-item"><span class="material-symbols-outlined ">book_3</span>樂活好書</div>
-                    <div class="label-btn purple reveal-item"><span class="material-symbols-outlined">medical_services</span>醫療保健</div>
-                    <div class="label-btn purple reveal-item"><span class="material-symbols-outlined">face_4</span>樂齡學習</div>
-                    <div class="label-btn purple reveal-item"><span class="material-symbols-outlined">wall_art</span>展覽活動</div>
+                    <a href="#content-wrapper-purple" class="label-btn purple active reveal-item"><span class="material-symbols-outlined ">book_3</span>樂活好書</a>
+                    <a href="#content-wrapper-purple" class="label-btn purple reveal-item"><span class="material-symbols-outlined">medical_services</span>醫療保健</a>
+                    <a href="#content-wrapper-purple" class="label-btn purple reveal-item"><span class="material-symbols-outlined">face_4</span>樂齡學習</a>
+                    <a href="#content-wrapper-purple" class="label-btn purple reveal-item"><span class="material-symbols-outlined">wall_art</span>展覽活動</a>
                 </div>
             </div>
         </section>
-        <section class="content-wrapper">
+        <section class="content-wrapper" id="content-wrapper-purple">
             <img src="images/bg/tour-guide-purple01-3.png" alt="tour-guide-purple" class="tour-guide-purple-bg">
             <!-- 頁面一 樂活好書 -->
             <div class="container outer-frame purple good-books">
