--- a/about.html
+++ b/about.html
@@ -38,25 +38,27 @@
                             <li><a href="newbooks.html" class="p2">最新書籍</a></li>
                             <li><a href="contact.html" class="p2">聯絡我們</a></li>
                             <li>
-                                <p class="p2">導覽服務</p>
-                                <a href="student.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
+                                <a class="p2 tour-guide-toggle">導覽服務
+                                    <span class="material-symbols-outlined arrow">keyboard_arrow_down</span>
                                 </a>
-                                <a href="advanced-course.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">flag</span>研究與進修專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
-                                </a>
-                                <a href="senior.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">person_play</span>樂齡學習專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
-                                </a>
+                                <div class="tour-guide-sm">
+                                    <a href="student.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
+                                        </div>
+                                    </a>
+                                    <a href="advanced-course.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">flag</span>研究與進修專區
+                                        </div>
+                                    </a>
+                                    <a href="senior.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">person_play</span>樂齡學習專區
+                                        </div>
+                                    </a>
+                                </div>
+                                
                             </li>
                         </ul>
                         <div class="tool-btn">
@@ -125,7 +127,7 @@
                         <img src="images/about/about03.png" alt="公共圖書館室內" class="reveal-item">
                         <img src="images/about/about04.png" alt="公共圖書館室內" class="reveal-item">
                     </div>
-                    <div class="col-sm-12 col-md-7 col-5">
+                    <div class="col-md-12 col-md-7 col-5">
                         <div class="text reveal-fadein">
                             <h4 class="h4-ch-medium">主要閱覽區</h4>
                             <p class="p2">圖書館主要閱覽區館舍為一地上三層、地下一層之獨立建築，總樓地板面積約為 4,372 平方公尺，館內局部區域採天光設計，可解決內部深處的採光，並形成空氣對流，有利書籍典藏及讀者閱覽。</p>
@@ -220,10 +222,10 @@
         <section class="about-info">
             <div class="container">
                 <div class="row detail">
-                    <div class="col-sm-12 col-6 reveal-item">
+                    <div class="col-md-12 col-6 reveal-item">
                         <img src="images/about/about05.png" alt="圖書館外觀">
                     </div>
-                    <div class="col-sm-12 col-6 text reveal-fadein">
+                    <div class="col-md-12 col-6 text reveal-fadein">
                         <h4 class="h4-ch-medium">圖書館簡介</h4>
                         <div class="line"></div>
                         <div>
@@ -240,10 +242,10 @@
                     </div>
                 </div>
                 <div class="row detail">
-                    <div class="col-sm-12 col-6 reveal-item">
+                    <div class="col-md-12 col-6 reveal-item">
                         <img src="images/about/about06.png" alt="圖書館情境">
                     </div>
-                    <div class="col-sm-12 col-6 text reveal-fadein">
+                    <div class="col-md-12 col-6 text reveal-fadein">
                         <h4 class="h4-ch-medium">開館時間</h4>
                         <div class="line"></div>
                         <div>
