--- a/advanced-course.html
+++ b/advanced-course.html
@@ -35,25 +35,27 @@
                             <li><a href="newbooks.html" class="p2">最新書籍</a></li>
                             <li><a href="contact.html" class="p2">聯絡我們</a></li>
                             <li>
-                                <p class="p2">導覽服務</p>
-                                <a href="student.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
+                                <a class="p2 tour-guide-toggle">導覽服務
+                                    <span class="material-symbols-outlined arrow">keyboard_arrow_down</span>
                                 </a>
-                                <a href="advanced-course.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">flag</span>研究與進修專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
-                                </a>
-                                <a href="senior.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">person_play</span>樂齡學習專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
-                                </a>
+                                <div class="tour-guide-sm">
+                                    <a href="student.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
+                                        </div>
+                                    </a>
+                                    <a href="advanced-course.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">flag</span>研究與進修專區
+                                        </div>
+                                    </a>
+                                    <a href="senior.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">person_play</span>樂齡學習專區
+                                        </div>
+                                    </a>
+                                </div>
+                                
                             </li>
                         </ul>
                         <div class="tool-btn">
@@ -120,15 +122,15 @@
             <img src="images/bg/tour-guide-orange-w810-2.png" alt="tour-guide-orange" class="tour-guide-orange-bg-w810">
             <div class="container">
                 <div class="row">
-                    <div class="label-btn orange active reveal-item"><span class="material-symbols-outlined">book_3</span>好書推薦</div>
-                    <div class="label-btn orange reveal-item"><span class="material-symbols-outlined">local_activity</span>論文期刊</div>
-                    <div class="label-btn orange reveal-item"><span class="material-symbols-outlined">child_hat</span>職場理財</div>
-                    <div class="label-btn orange reveal-item"><span class="material-symbols-outlined">emoji_objects</span>研習課程</div>
+                    <a href="#content-wrapper-orange" class="label-btn orange active reveal-item"><span class="material-symbols-outlined">book_3</span>好書推薦</a>
+                    <a href="#content-wrapper-orange" class="label-btn orange reveal-item"><span class="material-symbols-outlined">local_activity</span>論文期刊</a>
+                    <a href="#content-wrapper-orange" class="label-btn orange reveal-item"><span class="material-symbols-outlined">child_hat</span>職場理財</a>
+                    <a href="#content-wrapper-orange" class="label-btn orange reveal-item"><span class="material-symbols-outlined">emoji_objects</span>研習課程</a>
                 </div>
             </div>
         </section>
 
-        <section class="content-wrapper">
+        <section class="content-wrapper" id="content-wrapper-orange">
             <img src="images/bg/tour-guide-orange01-3.png" alt="tour-guide-orange" class="tour-guide-orange-bg">
             <!-- 頁面一 好書推薦 -->
             <div class="container outer-frame orange good-books">
@@ -557,7 +559,7 @@
             </div>
             <!-- 頁面三 職場理財 -->
             <div class="container outer-frame orange financial hidden">
-                <div class="row">
+                <div class="row financial-news">
                     <div class="col-md-12 col-6">
                         <h4 class="h4-ch"><a href="">財經新聞與趨勢></a></h4>
                         <a href="">
@@ -566,7 +568,7 @@
                                 <div class="card-mask">
                                     <h5 class="h5-ch-medium">央行升息衝擊：房貸族如何調整年度財務規劃</h5>
                                     <div>
-                                        <p class="p2">利率政策, 房地產, 家庭理財 | 閱讀時間: 4分鐘</p>
+                                        <p class="p2">利率政策, 房地產, 理財 | 閱讀時間: 4分鐘</p>
                                         <p class="p2">2025.10.30</p>
                                     </div>
                                 </div>
