--- a/contact.html
+++ b/contact.html
@@ -36,25 +36,27 @@
                             <li><a href="newbooks.html" class="p2">最新書籍</a></li>
                             <li><a href="#" class="active p2">聯絡我們</a></li>
                             <li>
-                                <p class="p2">導覽服務</p>
-                                <a href="student.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
+                                <a class="p2 tour-guide-toggle">導覽服務
+                                    <span class="material-symbols-outlined arrow">keyboard_arrow_down</span>
                                 </a>
-                                <a href="advanced-course.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">flag</span>研究與進修專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
-                                </a>
-                                <a href="senior.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">person_play</span>樂齡學習專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
-                                </a>
+                                <div class="tour-guide-sm">
+                                    <a href="student.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
+                                        </div>
+                                    </a>
+                                    <a href="advanced-course.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">flag</span>研究與進修專區
+                                        </div>
+                                    </a>
+                                    <a href="senior.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">person_play</span>樂齡學習專區
+                                        </div>
+                                    </a>
+                                </div>
+                                
                             </li>
                         </ul>
                         <div class="tool-btn">
