--- a/search.html
+++ b/search.html
@@ -36,25 +36,27 @@
                             <li><a href="newbooks.html" class="p2">最新書籍</a></li>
                             <li><a href="contact.html" class="p2">聯絡我們</a></li>
                             <li>
-                                <p class="p2">導覽服務</p>
-                                <a href="student.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
+                                <a class="p2 tour-guide-toggle">導覽服務
+                                    <span class="material-symbols-outlined arrow">keyboard_arrow_down</span>
                                 </a>
-                                <a href="advanced-course.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">flag</span>研究與進修專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
-                                </a>
-                                <a href="senior.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">person_play</span>樂齡學習專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
-                                </a>
+                                <div class="tour-guide-sm">
+                                    <a href="student.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
+                                        </div>
+                                    </a>
+                                    <a href="advanced-course.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">flag</span>研究與進修專區
+                                        </div>
+                                    </a>
+                                    <a href="senior.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">person_play</span>樂齡學習專區
+                                        </div>
+                                    </a>
+                                </div>
+                                
                             </li>
                         </ul>
                         <div class="tool-btn">
@@ -98,52 +100,15 @@
                 <div class="select-btn-group reveal-item">
                     <div class="select-wrapper">
                         <span class="material-symbols-rounded">keyboard_arrow_down</span>
-                        <select name="" id="" class="select-btn p2">
-                            <option value="">全文</option>
-                            <option value="">題名</option>
-                            <option value="">作者</option>
-                            <option value="">主題/標籤</option>
-                            <option value="">ISBN</option>
-                            <option value="">ISSN</option>
-                            <option value="">條碼號</option>
-                            <option value="">索書號</option>
-                            <option value="">出版者</option>
-                            <option value="">分類號</option>
-                            <option value="">叢書名</option>
-                        </select>
+                        <select name="search-field" id="search-field" class="select-btn p2"></select>
                     </div>
                     <div class="select-wrapper">
                         <span class="material-symbols-rounded">keyboard_arrow_down</span>
-                        <select name="" id="" class="select-btn p2">
-                            <option value="">全部類型</option>
-                            <option value="">圖書</option>
-                            <option value="">期刊</option>
-                            <option value="">多媒體</option>
-                        </select>
+                        <select name="type-select" id="type-select" class="select-btn p2"></select>
                     </div>
                     <div class="select-wrapper">
                         <span class="material-symbols-rounded">keyboard_arrow_down</span>
-                        <select name="" id="" class="select-btn p2">
-                            <option value="">分館查詢</option>
-                            <option value="">不分館別</option>
-                            <option value="">五峰</option>
-                            <option value="">北埔</option>
-                            <option value="">寶山</option>
-                            <option value="">尖石</option>
-                            <option value="">峨眉</option>
-                            <option value="">文化局</option>
-                            <option value="">文化局行動書庫</option>
-                            <option value="">新埔</option>
-                            <option value="">新豐</option>
-                            <option value="">橫山</option>
-                            <option value="">湖口</option>
-                            <option value="">竹北福德分館</option>
-                            <option value="">竹東</option>
-                            <option value="">竹東行動書庫</option>
-                            <option value="">縣史館</option>
-                            <option value="">芎林</option>
-                            <option value="">關西</option>
-                        </select>
+                        <select name="branch-select" id="branch-select" class="select-btn p2"></select>
                     </div>
                     
                 </div>
