--- a/student.html
+++ b/student.html
@@ -35,25 +35,27 @@
                             <li><a href="newbooks.html" class="p2">最新書籍</a></li>
                             <li><a href="contact.html" class="p2">聯絡我們</a></li>
                             <li>
-                                <p class="p2">導覽服務</p>
-                                <a href="student.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
+                                <a class="p2 tour-guide-toggle">導覽服務
+                                    <span class="material-symbols-outlined arrow">keyboard_arrow_down</span>
                                 </a>
-                                <a href="advanced-course.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">flag</span>研究與進修專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
-                                </a>
-                                <a href="senior.html" class="h5-ch">
-                                    <div class="text">
-                                        <span class="material-symbols-outlined">person_play</span>樂齡學習專區
-                                    </div>
-                                    <span class="material-symbols-outlined arrow">arrow_right_alt</span>
-                                </a>
+                                <div class="tour-guide-sm">
+                                    <a href="student.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
+                                        </div>
+                                    </a>
+                                    <a href="advanced-course.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">flag</span>研究與進修專區
+                                        </div>
+                                    </a>
+                                    <a href="senior.html" class="h5-ch">
+                                        <div class="text">
+                                            <span class="material-symbols-outlined">person_play</span>樂齡學習專區
+                                        </div>
+                                    </a>
+                                </div>
+                                
                             </li>
                         </ul>
                         <div class="tool-btn">
@@ -121,25 +123,25 @@
             <img src="images/bg/tour-guide-pink-w810-2.png" alt="tour-guide-pink-bg" class="tour-guide-pink-bg-w810">
             <div class="container">
                 <div class="row">
-                    <div class="label-btn pink active reveal-item">
+                    <a href="#content-wrapper-pink" class="label-btn pink active reveal-item">
                         <span class="material-symbols-outlined">book_3</span>
                         好書推薦
-                    </div>
-                    <div class="label-btn pink reveal-item">
+                    </a>
+                    <a href="#content-wrapper-pink" class="label-btn pink reveal-item">
                         <span class="material-symbols-outlined">local_activity</span>主題活動
-                    </div>
-                        <div class="label-btn pink reveal-item">
-                            <span class="material-symbols-outlined">child_hat</span>
-                            親子共讀
-                        </div>
-                    <div class="label-btn pink reveal-item">
+                    </a>
+                    <a href="#content-wrapper-pink" class="label-btn pink reveal-item">
+                        <span class="material-symbols-outlined">child_hat</span>
+                        親子共讀
+                    </a>
+                    <a href="#content-wrapper-pink" class="label-btn pink reveal-item">
                         <span class="material-symbols-outlined">emoji_objects</span>
                         學習資源
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
-        <section class="content-wrapper">
+        <section class="content-wrapper" id="content-wrapper-pink">
             <img src="images/bg/tour-guide-pink01-3.png" alt="tour-guide-pink" class="tour-guide-pink-bg">
             <!-- 頁面一 好書推薦 -->
             <div class="container outer-frame pink good-books">
@@ -158,7 +160,7 @@
                         <img src="images/books/student-books01.png" alt="student-books01">
                         <div class="detail">
                             <div class="green-tag">
-                                <p class="p2">台北國際書展首獎</p>
+                                <p class="p2">國際書展首獎</p>
                                 <button class="collect">
                                     <i class="fa-solid fa-heart"></i>
                                     <span class="p2">加入收藏</span>
@@ -171,7 +173,7 @@
                         <img src="images/books/student-books02.png" alt="student-books02">
                         <div class="detail">
                             <div class="green-tag">
-                                <p class="p2">台北國際書展首獎</p>
+                                <p class="p2">國際書展首獎</p>
                                 <button class="collect">
                                     <i class="fa-solid fa-heart"></i>
                                     <span class="p2">加入收藏</span>
@@ -184,7 +186,7 @@
                         <img src="images/books/student-books03.png" alt="student-books03">
                         <div class="detail">
                             <div class="green-tag">
-                                <p class="p2">台北國際書展首獎</p>
+                                <p class="p2">國際書展首獎</p>
                                 <button class="collect">
                                     <i class="fa-solid fa-heart"></i>
                                     <span class="p2">加入收藏</span>
@@ -197,7 +199,7 @@
                         <img src="images/books/student-books04.png" alt="student-books04">
                         <div class="detail">
                             <div class="green-tag">
-                                <p class="p2">台北國際書展首獎</p>
+                                <p class="p2">國際書展首獎</p>
                                 <button class="collect">
                                     <i class="fa-solid fa-heart"></i>
                                     <span class="p2">加入收藏</span>
@@ -210,7 +212,7 @@
                         <img src="images/books/student-books05.png" alt="student-books05">
                         <div class="detail">
                             <div class="green-tag">
-                                <p class="p2">台北國際書展首獎</p>
+                                <p class="p2">國際書展首獎</p>
                                 <button class="collect">
                                     <i class="fa-solid fa-heart"></i>
                                     <span class="p2">加入收藏</span>
@@ -223,7 +225,7 @@
                         <img src="images/books/student-books06.png" alt="student-books06">
                         <div class="detail">
                             <div class="green-tag">
-                                <p class="p2">台北國際書展首獎</p>
+                                <p class="p2">國際書展首獎</p>
                                 <button class="collect">
                                     <i class="fa-solid fa-heart"></i>
                                     <span class="p2">加入收藏</span>
@@ -236,7 +238,7 @@
                         <img src="images/books/student-books07.png" alt="student-books07">
                         <div class="detail">
                             <div class="green-tag">
-                                <p class="p2">台北國際書展首獎</p>
+                                <p class="p2">國際書展首獎</p>
                                 <button class="collect">
                                     <i class="fa-solid fa-heart"></i>
                                     <span class="p2">加入收藏</span>
@@ -249,7 +251,7 @@
                         <img src="images/books/student-books08.png" alt="student-books08">
                         <div class="detail">
                             <div class="green-tag">
-                                <p class="p2">台北國際書展首獎</p>
+                                <p class="p2">國際書展首獎</p>
                                 <button class="collect">
                                     <i class="fa-solid fa-heart"></i>
                                     <span class="p2">加入收藏</span>
