--- a/advanced-course.html
+++ b/advanced-course.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>研究與進修專區 | 公共圖書館</title>
+    <title>研究進修專區 | 公共圖書館</title>
     <link rel="stylesheet" href="style/style.css">
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,12 +41,12 @@
                                 <div class="tour-guide-sm">
                                     <a href="student.html" class="h5-ch">
                                         <div class="text">
-                                            <span class="material-symbols-outlined">menu_book</span>兒童與青少年專區
+                                            <span class="material-symbols-outlined">menu_book</span>兒童青少年專區
                                         </div>
                                     </a>
                                     <a href="advanced-course.html" class="h5-ch">
                                         <div class="text">
-                                            <span class="material-symbols-outlined">flag</span>研究與進修專區
+                                            <span class="material-symbols-outlined">flag</span>研究進修專區
                                         </div>
                                     </a>
                                     <a href="senior.html" class="h5-ch">
@@ -92,13 +92,13 @@
                 <div class="row">
                     <div class="col-lg-12 col-xl-7 col-8 reveal-item">
                         <span class="h1-eg-medium">Advanced Course</span>
-                        <h1 class="h1-ch">研究與進修專區</h1>
+                        <h1 class="h1-ch">研究進修專區</h1>
                         <div class="bread">
                             <a href="index.html" class="orange p2">首頁</a>
                             <span class="p2">></span>
                             <button class="orange p2 tour-guide-btn">導覽服務</button>
                             <span class="p2">></span>
-                            <span class="orange p2">研究與進修專區</span>
+                            <span class="orange p2">研究進修專區</span>
                         </div>
                     </div>
                     <div class="col-xl-5 col-4">
@@ -853,9 +853,9 @@
                         </ul>
                     </div>
                     <div class="tour-guide-group">
-                        <a href="student.html" class="big-btn light pink btn-mid">兒童與青少年專區<span
+                        <a href="student.html" class="big-btn light pink btn-mid">兒童青少年專區<span
                                 class="material-symbols-outlined">arrow_right_alt</span></a>
-                        <a href="advanced-course.html" class="big-btn light orange btn-mid">研究與進修專區<span
+                        <a href="advanced-course.html" class="big-btn light orange btn-mid">研究進修專區<span
                                 class="material-symbols-outlined">arrow_right_alt</span></a>
                         <a href="senior.html" class="big-btn light purple btn-mid">樂齡學習專區<span
                                 class="material-symbols-outlined">arrow_right_alt</span></a>
@@ -864,11 +864,11 @@
                     <div class="tour-guide-group-w440">
                         <a href="student.html" class="big-btn light pink btn-mid">
                             <span class="material-symbols-outlined">menu_book</span>
-                            兒童與青少年<br>專區
+                            兒童青少年<br>專區
                         </a>
                         <a href="advanced-course.html" class="big-btn light orange btn-mid">
                             <span class="material-symbols-outlined">flag</span>
-                            研究與進修<br>專區
+                            研究進修<br>專區
                         </a>
                         <a href="senior.html" class="big-btn light purple btn-mid">
                             <span class="material-symbols-outlined">person_play</span>
@@ -899,53 +899,77 @@
     <!-- 會員註冊登入視窗 -->
     <section id="account" class="account modal-overlay modalHidden">
         <div class="container">
-            <div class="modal-content row">
+            <div class="modal-content">
                 <div class="close-btn">
                     <span></span>
                     <span></span>
                 </div>
-                <div class="col-6">
-                    <div class="form-panel" id="signup-panel">
-                        <span class="h2-eg-medium">Sing up</span>
-                        <h2 class="h5-ch">註冊帳號</h2>
-                        <form action="">
-                            <label for="" class="p2">帳號
-                                <input type="text" placeholder="請輸入身分證字號或信箱"></label>
-                            <label for="" class="p2">密碼
-                                <input type="password" placeholder="請輸入密碼"></label>
-                            <label for="" class="p2">確認密碼
-                                <input type="password" placeholder="請再次輸入密碼"></label>
-                            <button type="submit" class="little-btn green-line btn-sm">註冊帳號</button>
+                <div class="form-wrapper row">
+                    <div class="col-6 change">
+                        <div class="form-panel" id="signup-panel">
+
+                            <form action="">
+                                <span class="h2-eg-medium">Sing up
+                                    <h2 class="h5-ch">註冊帳號</h2>
+                                </span>
+                                <label for="" class="p2">帳號
+                                    <input type="text" placeholder="請輸入身分證字號或信箱"></label>
+                                <label for="" class="p2">密碼
+                                    <input type="password" placeholder="請輸入密碼"></label>
+                                <label for="" class="p2">確認密碼
+                                    <input type="password" placeholder="請再次輸入密碼"></label>
+                                <button type="submit" class="little-btn green-line btn-sm">註冊帳號</button>
+                            </form>
+
                             <div id="switch-login">
                                 <p class="p2">已經有帳號了嗎?</p>
-                                <a href="#" class="p2">我要登入<span
-                                        class="material-symbols-outlined">arrow_right_alt</span></a>
-
+                                <a href="#" class="p2">我要登入
+                                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                                </a>
                             </div>
-                        </form>
-                        <img src="images/pop-up-window/signup.png" alt="signup image">
+                            <!-- 手機版滑動切換按鈕 -->
+                            <div id="switch-login1">
+                                <p class="p2">已經有帳號了嗎?</p>
+                                <a href="#" class="p2">我要登入
+                                    <span class="material-symbols-outlined">arrow_right_alt</span>
+                                </a>
+                            </div>
+                            <img src="images/pop-up-window/signup.png" alt="signup image" class="imgHidden">
+                        </div>
                     </div>
-                </div>
-                <div class="col-6">
-                    <div class="form-panel" id="login-panel">
-                        <span class="h2-eg-medium">Login</span>
-                        <h2 class="h5-ch">登入帳號</h2>
-                        <form action="">
-                            <label for="" class="p2">帳號
-                                <input type="text" placeholder="請輸入身分證字號或信箱"></label>
-                            <label for="" class="p2">密碼
-                                <input type="password" placeholder="請輸入密碼"></label>
-                            <a href="#" class="p2 forget">忘記密碼?</a>
-                            <button type="submit" class="little-btn green-line btn-sm">登入</button>
+                    <div class="col-6 change">
+                        <div class="form-panel" id="login-panel">
+                            
+                            <form action="">
+                                <span class="h2-eg-medium">Login
+                                    <h2 class="h5-ch">登入帳號</h2>
+                                </span>
+                                <label for="" class="p2">帳號
+                                    <input type="text" placeholder="請輸入身分證字號或信箱"></label>
+                                <label for="" class="p2">密碼
+                                    <input type="password" placeholder="請輸入密碼"></label>
+                                <a href="#" class="p2 forget">忘記密碼?</a>
+                                <button type="submit" class="little-btn green-line btn-sm">登入</button>
+                            </form>
+
                             <div id="switch-signup">
-                                <a href="#" class="p2"><span
-                                        class="material-symbols-outlined">arrow_left_alt</span>註冊新帳號</a>
+                                <a href="#" class="p2">
+                                    <span class="material-symbols-outlined">arrow_left_alt</span>註冊新帳號
+                                </a>
                                 <p class="p2">您還沒有帳號嗎?</p>
                             </div>
-                        </form>
-                        <img src="images/pop-up-window/login.png" alt="login image" class="imgHidden">
+                            <!-- 手機版滑動切換按鈕 -->
+                            <div id="switch-signup1">
+                                <a href="#" class="p2">
+                                    <span class="material-symbols-outlined">arrow_left_alt</span>註冊新帳號
+                                </a>
+                                <p class="p2">您還沒有帳號嗎?</p>
+                            </div>
+                            <img src="images/pop-up-window/login.png" alt="login image">
+                        </div>
                     </div>
                 </div>
+                
             </div>
         </div>
     </section>
@@ -965,7 +989,7 @@
                             <span class="material-symbols-outlined arrow">north_east</span>
                             <div class="card-content">
                                 <span class="material-symbols-outlined">menu_book</span>
-                                <h4 class="h4-ch">兒童與青少年專區</h4>
+                                <h4 class="h4-ch">兒童青少年專區</h4>
                                 <span class="h3-eg">Kid & Teenager</span>
                                 <div class="btn-sm-group ">
                                     <div class="btn-sm">好書推薦</div>
@@ -981,7 +1005,7 @@
                             <span class="material-symbols-outlined arrow">north_east</span>
                             <div class="card-content">
                                 <span class="material-symbols-outlined">flag</span>
-                                <h4 class="h4-ch">研究與進修專區</h4>
+                                <h4 class="h4-ch">研究進修專區</h4>
                                 <span class="h3-eg">Advanced Course</span>
                                 <div class="btn-sm-group ">
                                     <div class="btn-sm">好書推薦</div>
